 * Added ability to get client hostname (/echo (gethostname <cn>) or /showhostname to show on scoreboard)
 * Intermission now waits full time before proceeding to the next map
 * Added auto-mute on chat spam (warns on 3 lines per 10 seconds, mutes after 3 warns)
 * Voting mid-game now requires unanimous vote
 * Added selectable voting styles (/voteinterm, /votestyle)

Core & Install:
 * Corrected icon size for x32 and x48 versions
 * SDL 1.2.15
 * Remove "-r" command-line option
 * Enet 1.3.5
 * 64bit builds for Windows
 * Use APP/app* variables for name abstraction (simplifies forking/install renaming)
 * *nix icons stored as PNG/XPM, no ImageMagick needed in system-install process
 * all-licenses.txt added, exhaustive copyright/license breakdown
 * Basic math commands in CubeScript now accepts multiple arguments

Additional Fixed Bugs:
 * #103 - [minor] Revenge-seeking remains after team-change
 * #112 - Fix server browser sorting full servers to the bottom
 * #115 - When joining mid-match, bomber-ball affinities aren't enabled
 * #128 - Buff state not properly synchronised
 * #129 - Spawn rotation problems
 * #136 - Arena-expert and submodes are bugged (rocket & grenade select issues)
 * #132 - venus geom errors
 * #135 - ghost geom errors
 * #117 - Team-duel problems (force cycle team member after 3 wins)
 * #113 - Botbalance issues (breaks if teambalance = 2 or team imbalance is > 1)
 * #154 - Fix darkness omega bb-goal to be at same position as alpha
 * #158 - Possibility to miss first checkpoint on testchamber
 * #164 - synchronise death count in resume/frag messages
 * #165 - ghost clipping (disable odd sniper spot)
 * #148 - replaced tabs on texture gui with scrolling pages
 * #141 - can select a team while in spectator to join the game on a specific team
 * #126 - Looping focus-oriented sounds persist after target change (new camerapos code takes care of attenuation already)